txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -483,7 +483,7 @@ The alternative definition for Gaussian processes are:
 \begin{definition}
 	A vector valued \rv $Y:\Omega\to\R^{n}$ is Gaussian if there exists a vector valued $X$ having $n$-dimensional standard Gaussian distribution and $m\times n$ matrix $A$ and a $m$-dimensional vector $b$ such that
 	\begin{equation*}
-		Y=AX+b\qquad\text{and }A
+		Y=AX+b\qquad\text{and }AA^{\trsp}=\Sigma
 	\end{equation*}
 \end{definition}
 \clearpage
