txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -530,6 +530,7 @@
 									\newcommand{\every}{\forall\,}
 									\newcommand{\dyadic}{\mathcal{d}}
 									\newcommand{\norm}[1]{\left|\negthinspace\left|#1\right|\negthinspace\right|}
+									\newcommand{\trsp}{\mathsf{T}}
 		\newcommand{\pr}{\mathbb{P}}
 		\newcommand{\indi}{\mathbb{1}}
 		\newcommand{\sumiinf}{\sum_{i=1}^{\infty}}
