txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -483,9 +483,10 @@ The alternative definition for Gaussian processes are:
 \begin{definition}
 	A vector valued \rv $Y:\Omega\to\R^{n}$ is Gaussian if there exists a vector valued $X$ having $n$-dimensional standard Gaussian distribution and $m\times n$ matrix $A$ and a $m$-dimensional vector $b$ such that
 	\begin{equation*}
-		Y=AX+b\qquad\text{and }AA^{\trsp}=\Sigma
+		Y=AX+b\qquad\text{and }AA^{\trsp}=\Sigma.
 	\end{equation*}
 \end{definition}
+In this case $Y$ us a linear transformation of the Gaussian vector and $A$ projects $X$ in a $m$-dimensional subspace. This is the same procedure we do with Principal Component Analysis, where we diagonalize a matrix and other passages I don't remember and I don't care about.
 \clearpage
 \listoffigures  
 \end{document} 
