txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -490,10 +490,10 @@ In this case $Y$ us a linear transformation of the Gaussian vector and $A$ proje
 There are some properties:
 \begin{proposition}
 	\begin{itemize}
-		\item Let $X\distnorm{0,\Sigma_{n}}$. The distribution of $\left[X_{k+1,\ldots,k+n}}\right]$ conditioned to $\left[X_{1}=x_{1},\ldots,X_{k}=x_{k}\right]$ is \begin{equation*}
+		\item Let $X\distnorm{0,\Sigma_{n}}$. The distribution of $\left[X_{k+1,\ldots,k+n}\right]$ conditioned to $\left[X_{1}=x_{1},\ldots,X_{k}=x_{k}\right]$ is \begin{equation*}
 		W(0,\Sigma_{2|1})
 		\end{equation*}
-		
+		wher
 	\end{itemize}
 \end{proposition}
 \clearpage
