txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -493,7 +493,10 @@ There are some properties:
 		\item Let $X\distnorm{0,\Sigma_{n}}$. The distribution of $\left[X_{k+1,\ldots,k+n}\right]$ conditioned to $\left[X_{1}=x_{1},\ldots,X_{k}=x_{k}\right]$ is \begin{equation*}
 		W(0,\Sigma_{2|1})
 		\end{equation*}
-		wher
+		where 
+		\begin{equation*}
+			\Sigma_{2|1}=\Sigma_{22}-\Sigma_{21}\Sigma_{11}^{-1}\Sigma_{12}
+		\end{equation*}
 	\end{itemize}
 \end{proposition}
 \clearpage
