txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -201,9 +201,7 @@
 					enhanced, 
 					breakable,
 					sharp corners,
-					interior style={left color=RoyalBlue4!40!Aquamarine1,right color=RoyalBlue4!40},
-					frame style={left color=RoyalBlue4!80!Aquamarine1,right color=RoyalBlue4},
-					colframe=white, coltitle=RoyalBlue4, title style={left color=white!60, right color=RoyalBlue4!80},
+					colframe=white, coltitle=RoyalBlue4,
 					colback=Maroon1,
 					drop fuzzy shadow=gray,
 					titlerule=0mm,
