txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -201,8 +201,9 @@
 					enhanced, 
 					breakable,
 					sharp corners,
-					colframe=white, coltitle=RoyalBlue4,
+					colframe=white, coltitle=white,
 					colback=Maroon1,
+					colbacktitle=LightGoldenrod4,
 					titlerule=1mm,
 					separator sign={:},
 					description formatter=\newline,
