txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -201,7 +201,7 @@
 					enhanced, 
 					breakable,
 					sharp corners,
-					colframe=white, coltitle=white,
+					colframe=LemonChiffon4, coltitle=white,
 					colback=Maroon1,
 					colbacktitle=LightGoldenrod4,
 					titlerule=0.3mm,
