txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -203,7 +203,7 @@
 					sharp corners,
 					colframe=LemonChiffon4, coltitle=white,
 					colback=Maroon1,
-					colbacktitle=LightGoldenrod4,
+					colbacktitle=LightGoldenrod4!80,
 					titlerule=0.3mm,
 					separator sign={:},
 					description formatter=\newline,
