txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -201,9 +201,9 @@
 					enhanced, 
 					breakable,
 					sharp corners,
-					colframe=LemonChiffon4, coltitle=white,
+					colframe=LemonChiffon4!70, coltitle=white,
 					colback=Maroon1,
-					colbacktitle=LightGoldenrod4!80,
+					colbacktitle=LightGoldenrod4,
 					titlerule=0.3mm,
 					separator sign={:},
 					description formatter=\newline,
