txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -203,7 +203,8 @@
 					sharp corners,
 					colframe=LemonChiffon4!70, coltitle=white,
 					colback=Maroon1,
-					colbacktitle=LightGoldenrod4,
+					colbacktitle=LemonChiffon2,
+					fonttitle=\bfseries,
 					titlerule=0.3mm,
 					separator sign={:},
 					description formatter=\newline,
