--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -202,8 +202,8 @@
 					breakable,
 					sharp corners,
 					colframe=LemonChiffon4!70, coltitle=white,
-					colback=Maroon1,
-					colbacktitle=LemonChiffon2,
+					colback=LemonChiffon2,
+					colbacktitle=LightGoldenrod4,
 					fonttitle=\bfseries,
 					titlerule=0.3mm,
 					separator sign={:},
