txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -497,6 +497,13 @@ There are some properties:
 		\begin{equation*}
 			\Sigma_{2|1}=\Sigma_{22}-\Sigma_{21}\Sigma_{11}^{-1}\Sigma_{12}
 		\end{equation*}
+		and 
+		\begin{equation*}
+			\Sigma=\begin{bmatrix}
+				\Sigma_{11}&\Sigma_{12}\\
+				\Sigma_{21}&\Sigma_{22}
+			\end{bmatrix}
+		\end{equation*}
 	\end{itemize}
 \end{proposition}
 \clearpage
