txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -502,8 +502,10 @@ There are some properties:
 			\Sigma=\begin{bmatrix}
 				\Sigma_{11}&\Sigma_{12}\\
 				\Sigma_{21}&\Sigma_{22}
-			\end{bmatrix}
+			\end{bmatrix}.
 		\end{equation*}
+		Note that the sub-matrices that $\Sigma$ is made of have lower dimensionality.
+		\item If $Y=\ubracketthin{a}_{\in\R^{m}}+\ubracketthin{B}_{\in\R^{n}\times\R^{m}}X$ is an affine transformation of $X\distnorm{\mu,\varepsilon}$ then $Y\distnorm{a+B\mu, B\Sigma B^{\trsp}}$
 	\end{itemize}
 \end{proposition}
 \clearpage
