txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -505,7 +505,8 @@ There are some properties:
 			\end{bmatrix}.
 		\end{equation*}
 		Note that the sub-matrices that $\Sigma$ is made of have lower dimensionality.
-		\item If $Y=\ubracketthin{a}_{\in\R^{m}}+\ubracketthin{B}_{\in\R^{n}\times\R^{m}}X$ is an affine transformation of $X\distnorm{\mu,\varepsilon}$ then $$Y\distnorm{a+B\mu, B\Sigma B^{\trsp}}$$.
+		\item If $Y=\ubracketthin{a}_{\in\R^{m}}+\ubracketthin{B}_{\in\R^{n}\times\R^{m}}X$ is an affine transformation of $X\distnorm{\mu,\varepsilon}$ then $$Y\distnorm{a+B\mu, B\Sigma B^{\trsp}}.$$
+		This is like working with the affine transformation.
 	\end{itemize}
 \end{proposition}
 \clearpage
