txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -509,6 +509,14 @@ There are some properties:
 		This is like working with the affine transformation.
 	\end{itemize}
 \end{proposition}
+What about another definition? I think we need it
+\begin{definition}
+	A Gaussian process is a stochastic process such that for every $t_{1},\ldots,t_{k}$ in the index set $\T$ and each $k>1$ we have that
+	\begin{equation*}
+		\left(X_{t_{1}},\ldots,X_{t_{k}}\right)=X_{t_{1},\ldots,t_{k}}
+	\end{equation*}
+	is a multivariate Gaussian random vector (possibly degenerate).
+\end{definition}
 \clearpage
 \listoffigures  
 \end{document} 
