--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -517,6 +517,8 @@ What about another definition? I think we need it
 	\end{equation*}
 	is a multivariate Gaussian random vector (possibly degenerate).
 \end{definition}
+Now we have defined a class of processes:
+There is another class: the Levy processes: they have independent and stationary increment (so they are Markov processes) but unlike \bwm{} we don't require continuity on the sample path, but just \ul{continuity on the right of sample paths} and \ul{admit left limit}.
 \clearpage
 \listoffigures  
 \end{document} 
