txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -521,7 +521,7 @@ Now we have defined a class of processes:
 \begin{figure}[h]
 	\centering
 	\begin{tikzpicture}[framed]
-		\draw[thick] (0,0) circle (1.5cm) node {$A$}
+		\draw[thick] (0,0) circle (1.5cm) node[anchor=east] {$A$}
 		(2,0) circle (1.5cm) node {$B$} (1,-1.5) circle (1.5cm) node {$C$};
 		\node[anchor=south] at (current bounding box.north) {$A \cup B$};
 	\end{tikzpicture}
