--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -523,7 +523,7 @@ Now we have defined a class of processes:
 	\begin{tikzpicture}[framed]
 		\draw[thick] (0,0) circle (1.5cm) node[anchor=east] {$A$}
 		(2,0) circle (1.5cm) node[anchor=west] {$B$} (1,-1.5) circle (1.5cm) node[anchor=north] {$C$};
-		\node[anchor=south,yshift=-2cm] at (current bounding box.north) {$A \cup B$};
+		\node[anchor=south,yshift=-2.3cm] at (current bounding box.north) {$BM$};
 	\end{tikzpicture}
 \end{figure}
 There is another class: the Levy processes: they have independent and stationary increment (so they are Markov processes) but unlike \bwm{} we don't require continuity on the sample path, but just \ul{continuity on the right of sample paths} and \ul{admit left limit}.
