txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -522,7 +522,7 @@ Now we have defined a class of processes:
 	\centering
 	\begin{tikzpicture}[framed]
 		\draw[thick] (0,0) circle (1.5cm) node[anchor=east] {$A$}
-		(2,0) circle (1.5cm) node[anchor=west] {$B$} (1,-1.5) circle (1.5cm) node[anchor=north] {$C$};
+		(2,0) circle (1.5cm) node[anchor=west] {$B$} (1,-1.5) circle (1.5cm) node[anchor=north] {Martingle tools};
 		\node[anchor=south,yshift=-2.3cm] at (current bounding box.north) {$BM$};
 	\end{tikzpicture}
 \end{figure}
