txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -521,8 +521,8 @@ Now we have defined a class of processes:
 \begin{figure}[h]
 	\centering
 	\begin{tikzpicture}[framed]
-		\draw[thick] (0,0) circle (1.5cm) node[anchor=east] {Gaussian processes}
-		(2,0) circle (1.5cm) node[anchor=west] {Markov processes} (1,-1.5) circle (1.5cm) node[anchor=north] {Martingle tools};
+		\draw[thick] (0,0) circle (1.5cm) node[anchor=east] {Gaussian \\ processes}
+		(2,0) circle (1.5cm) node[anchor=west] {Markov\\ processes} (1,-1.5) circle (1.5cm) node[anchor=north] {Martingle tools};
 		\node[anchor=south,yshift=-2.3cm] at (current bounding box.north) {$BM$};
 	\end{tikzpicture}
 \end{figure}
