--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -521,7 +521,7 @@ Now we have defined a class of processes:
 \begin{figure}[h]
 	\centering
 	\begin{tikzpicture}[framed]
-		\draw[thick] (0,0) circle (1.5cm) node[anchor=east,text width=2cm] {Gaussian processes}
+		\draw[thick] (0,0) circle (1.5cm) node[anchor=east,text width=2cm,xshift=1cm] {Gaussian processes}
 		(2,0) circle (1.5cm) node[anchor=west] {Markov processes} (1,-1.5) circle (1.5cm) node[anchor=north] {Martingle tools};
 		\node[anchor=south,yshift=-2.3cm] at (current bounding box.north) {$BM$};
 	\end{tikzpicture}
