txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -518,7 +518,7 @@ What about another definition? I think we need it
 	is a multivariate Gaussian random vector (possibly degenerate).
 \end{definition}
 Now we have defined a class of processes:
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\begin{tikzpicture}[framed]
 		\draw[thick] (0,0) circle (1.5cm) node[anchor=east,text width=2cm,xshift=1cm,yshift=0.2cm] {Gaussian processes}
