txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -525,7 +525,7 @@ Now we have defined a class of processes:
 		(2,0) circle (1.5cm) node[anchor=west, text width=1.8cm,yshift=0.2cm] {Markov processes} (1,-1.5) circle (1.5cm) node[anchor=north] {Martingle tools};
 		\node[anchor=south,yshift=-2.3cm,xshift=-0.3cm,red] at (current bounding box.north) {$BM$};
 	\end{tikzpicture}
-	\caption{Balls}
+	\caption{Balls.}
 \end{figure}
 There is another class: the Levy processes: they have independent and stationary increment (so they are Markov processes) but unlike \bwm{} we don't require continuity on the sample path, but just \ul{continuity on the right of sample paths} and \ul{admit left limit}.
 \clearpage
