--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -520,7 +520,7 @@ What about another definition? I think we need it
 Now we have defined a class of processes:
 \begin{figure}[H]
 	\centering
-	\begin{tikzpicture}[framed]
+	\begin{tikzpicture}
 		\draw[thick] (0,0) circle (1.5cm) node[anchor=east,text width=2cm,xshift=1cm,yshift=0.2cm] {Gaussian processes}
 		(2,0) circle (1.5cm) node[anchor=west, text width=1.8cm,yshift=0.2cm] {Markov processes} (1,-1.5) circle (1.5cm) node[anchor=north] {Martingle tools};
 		\node[anchor=south,yshift=-2.3cm,xshift=-0.3cm,red] at (current bounding box.north) {$BM$};
