txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -528,6 +528,12 @@ Now we have defined a class of processes:
 	\caption{Balls.}
 \end{figure}
 There is another class: the Levy processes: they have independent and stationary increment (so they are Markov processes) but unlike \bwm{} we don't require continuity on the sample path, but just \ul{continuity on the right of sample paths} and \ul{admit left limit}.
+\begin{definition}
+	We call \emph{marginal distribution} of $\{B_{t}\}$ the laws of the finite dimension vectors
+	\begin{equation*}
+		\Gamma_{n}=\left(B_{t_{1}},B_{t_{2}},\ldots,B_{t_{n}}\right)
+	\end{equation*}
+\end{definition}
 \clearpage
 \listoffigures  
 \end{document} 
