--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -531,7 +531,7 @@ There is another class: the Levy processes: they have independent and stationary
 \begin{definition}
 	We call \emph{marginal distribution} of $\{B_{t}\}$ the laws of the finite dimension vectors
 	\begin{equation*}
-		\Gamma_{n}=\left(B_{t_{1}},B_{t_{2}},\ldots,B_{t_{n}}\right)^{\trsp}
+		\Gamma_{n}=\left(B_{t_{1}},B_{t_{2}},\ldots,B_{t_{n}}\right)^{\trsp}\qquad 0\leq t_{1}<t_{2}<\ldots<t_{n}<\infty,\quad\every n>0
 	\end{equation*}
 \end{definition}
 \clearpage
