txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -538,6 +538,13 @@ There are properties about the increments
 \begin{equation*}
 	(B_{t_{1}}-B_{t_{0}},B_{t_{2}}-B_{t_{1}},\ldots,B_{t_{n}}-B_{t_{n-1}})
 \end{equation*}
+but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian. 
+\begin{proposition}
+	Let $B={\{B_{t}\}}_{t\geq 0}$ be a standard BM in $[0,\infty)$. Let $s,t$ be given and fixed. The covariance will be 
+	\begin{equation*}
+		\ev\left[B_{t}B_{s}\right]=s\wedge t.
+	\end{equation*}
+\end{proposition}
 \clearpage
 \listoffigures  
 \end{document} 
