txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -404,9 +404,9 @@
 		colback=red!5!white,sharp corners, colframe=white,
 		breakable,
 		coltitle=black,
+		colbacklower=green,
 		fonttitle=\bfseries\itshape,
 		interior style={gray!20},
-		frame style={white},
 		title={Proof}}	
 		
 		\newenvironment{fancyproof}[1][]{
