txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -401,10 +401,9 @@
 	
 	\newtcolorbox{proofbox}{
 		enhanced,
-		colback=red!5!white,sharp corners, colframe=white,
+		colback=red!5!white,sharp corners, colframe=gray!10,
 		breakable,
 		coltitle=black,
-		colbacklower=green,
 		fonttitle=\bfseries\itshape,
 		interior style={gray!20},
 		title={Proof}}	
