txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -401,7 +401,7 @@
 	
 	\newtcolorbox{proofbox}{
 		enhanced,
-		colback=red!5!white,sharp corners, colframe=gray!10,
+		colback=red!5!white,sharp corners, colframe=gray!10!Cornsilk2!20,
 		breakable,
 		coltitle=black,
 		fonttitle=\bfseries\itshape,
