txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -549,8 +549,10 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	Assume, without loss of generality, that $s<t$. Then
 	\begin{align*}
 		\ev\left[B_{t}B_{s}\right]&=\ev\left[(B_{t}-B_{s}+B_{s})B_{s}\right]\\
-		&=\ubracketthin{\ev\left[(B_{t}-B_{s})B_{s}\right]}_{\claptext{independent incrememnts}}+\ubracketthin{\ev[B^{2}_{s}]}_{\var(B_{s})=s}
+		&=\ubracketthin{\ev\left[(B_{t}-B_{s})B_{s}\right]}_{\claptext{independent incrememnts}}+\ubracketthin{\ev[B^{2}_{s}]}_{\var(B_{s})=s}\\
+		&=\ev[B_{t}-B_{s}]\ubracketthin{\ev[B_{s}]}_{=0}+s=s.
 	\end{align*}
+	But, similarly, if $s>t$ then $\ev[B_{t}B_{s}]=1t/$
 \end{fancyproof}
 \clearpage
 \listoffigures  
