txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -552,7 +552,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 		&=\ubracketthin{\ev\left[(B_{t}-B_{s})B_{s}\right]}_{\claptext{independent incrememnts}}+\ubracketthin{\ev[B^{2}_{s}]}_{\var(B_{s})=s}\\
 		&=\ev[B_{t}-B_{s}]\ubracketthin{\ev[B_{s}]}_{=0}+s=s.
 	\end{align*}
-	But, similarly, if $s>t$ then $\ev[B_{t}B_{s}]=1t/$
+	But, similarly, if $s>t$ then $\ev[B_{t}B_{s}]=t$.
 \end{fancyproof}
 \clearpage
 \listoffigures  
