txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -554,6 +554,16 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	\end{align*}
 	But, similarly, if $s>t$ then $\ev[B_{t}B_{s}]=t$.
 \end{fancyproof}
+\begin{remark}
+	For every 0$\leq t_{1}<\ldots<t_{n}$ and $n\geq 1$, we have:
+	\begin{equation*}
+		\begin{array}{l}
+			B_{t}\distnorm{0,t}\\
+			B_{t_{2}}-B_{t_{1}}\distnorm{0,t_{2}-t_{1}}\\
+			B_{t_{n}}-B_{t_{n-1}}\distnorm{0, t_{n}-t_{n-1}}
+		\end{array}
+	\end{equation*}
+\end{remark}
 \clearpage
 \listoffigures  
 \end{document} 
