txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -560,6 +560,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 		\begin{array}{l}
 			B_{t}\distnorm{0,t}\\
 			B_{t_{2}}-B_{t_{1}}\distnorm{0,t_{2}-t_{1}}\\
+			\vdots\\
 			B_{t_{n}}-B_{t_{n-1}}\distnorm{0, t_{n}-t_{n-1}}
 		\end{array}
 	\end{equation*}
