txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -570,6 +570,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 				0\\0\\ \vdots\\0\\
 		\end{smallmatrix}\right],[t_{i}\wedge t_{j}]^{n}_{i,j=1,\ldots n}}
 	\end{equation*}
+	which is a $n$-dimensional normal distribution.
 \end{remark}
 \clearpage
 \listoffigures  
