txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -572,6 +572,16 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	\end{equation*}
 	which is a $n$-dimensional normal distribution.
 \end{remark}
+\begin{fancyproof}
+	Consider a vector
+	\begin{equation*}
+		\Delta=\begin{bmatrix}
+			B_{t_{1}}-\ubracketthin{B_{t_{0}}}_{=0}\\
+			\vdots\\
+			B_{t_{n}}-B_{t_{0}}
+		\end{bmatrix}
+	\end{equation*}
+\end{fancyproof}
 \clearpage
 \listoffigures  
 \end{document} 
