txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -576,7 +576,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	Consider a vector
 	\begin{equation*}
 		\Delta=\begin{bmatrix}
-			B_{t_{1}}-\ubracketthin{B_{t_{0}}}_{=0}\\
+			B_{t_{1}}-\overbracket{B_{t_{0}}}^{=0}\\
 			\vdots\\
 			B_{t_{n}}-B_{t_{0}}
 		\end{bmatrix}
