txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -581,6 +581,10 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			B_{t_{n}}-B_{t_{0}}
 		\end{bmatrix}
 	\end{equation*}
+	and
+	\begin{equation*}
+		B_{t_{k}}-B_{t_{0}}=\sum^{k}\left(B_{t_{j}}-B_{t_{j-1}}\right)
+	\end{equation*}
 \end{fancyproof}
 \clearpage
 \listoffigures  
