txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -583,7 +583,18 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	\end{equation*}
 	and
 	\begin{equation*}
-		B_{t_{k}}-B_{t_{0}}=\sum^{k}\left(B_{t_{j}}-B_{t_{j-1}}\right)
+		B_{t_{k}}-B_{t_{0}}=\sum^{k}\left(B_{t_{j}}-B_{t_{j-1}}\right).
+	\end{equation*}
+	Let $M$ be a matrix $n\times n$. We now have the increment
+	\begin{equation*}
+		M=\begin{bmatrix}
+			1&0&0&&\ldots&0\\
+			1&1&0&&&\\
+			1&1&1&&&\vdots\\
+			\vdots&&&1&&&\\
+			\vdots&&&&\ddots&&\\
+			1&1&&&&1
+		\end{bmatrix}
 	\end{equation*}
 \end{fancyproof}
 \clearpage
