txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -593,7 +593,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			1&1&1&&&\vdots\\
 			\vdots&&&1&&&\\
 			\vdots&&&&\ddots&&\\
-			1&1&&&&1
+			1&1&&\ldots&&1
 		\end{bmatrix}
 	\end{equation*}
 \end{fancyproof}
