txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -588,12 +588,12 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	Let $M$ be a matrix $n\times n$. We now have the increment
 	\begin{equation*}
 		M=\begin{bmatrix}
-			1&0&0&&\ldots&0\\
+			1&0&0&&\cdots&0\\
 			1&1&0&&&\\
 			1&1&1&&&\vdots\\
 			\vdots&&&1&&&\\
 			\vdots&&&&\ddots&&\\
-			1&1&&\ldots&&1
+			1&1&&\cdots&&1
 		\end{bmatrix}
 	\end{equation*}
 \end{fancyproof}
