--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -589,10 +589,10 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	\begin{equation*}
 		M=\begin{bmatrix}
 			1&0&0&&\cdots&0\\
-			1&1&0&&&\\
+			1&1&0&&\cdots&0\\
 			1&1&1&&&\vdots\\
-			\vdots&&&1&&&\\
-			\vdots&&&&\ddots&&\\
+			\vdots&\vdots&&1&&&\\
+			\vdots&\vdots&&&\ddots&&\\
 			1&1&&\cdots&&1
 		\end{bmatrix}
 	\end{equation*}
