--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -592,8 +592,8 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			1&1&0&&\cdots&0\\
 			1&1&1&&&\vdots\\
 			\vdots&\vdots&&1&&&\\
-			\vdots&\vdots&&&\ddots&&\\
-			1&1&&\cdots&&1
+			\vdots&\vdots&&&\ddots&&0\\
+			1&1&&\cdots&1&1
 		\end{bmatrix}
 	\end{equation*}
 \end{fancyproof}
