--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -588,8 +588,8 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	Let $M$ be a matrix $n\times n$. We now have the increment
 	\begin{equation*}
 		M=\begin{bmatrix}
-			1&0&0&&\cdots&0\\
-			1&1&0&&\cdots&0\\
+			1&0&0&\cdots&\cdots&0\\
+			1&1&0&\cdots&\cdots&0\\
 			1&1&1&&&\vdots\\
 			\vdots&\vdots&&1&&&\\
 			\vdots&\vdots&&&\ddots&0\\
