txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -591,7 +591,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			1&0&0&\cdots&\cdots&0\\
 			1&1&0&\cdots&\cdots&0\\
 			1&1&1&&&\vdots\\
-			\vdots&\vdots&&1&&&\\
+			\vdots&\vdots&&1&&&\vdots\\
 			\vdots&\vdots&&&\ddots&0\\
 			1&1&&\cdots&1&1
 		\end{bmatrix}
