txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -585,7 +585,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 	\begin{equation*}
 		B_{t_{k}}-B_{t_{0}}=\sum^{k}\left(B_{t_{j}}-B_{t_{j-1}}\right).
 	\end{equation*}
-	Let $M$ be a matrix $n\times n$. We now have the increment
+	Let $M$ be a matrix $n\times n$. We now have the increment but we want a single component. When we want to prove that a vector is Gaussian we usually find a linear transformation that generates another Gaussian.
 	\begin{equation*}
 		M=\begin{bmatrix}
 			1&0&0&\cdots&\cdots&0\\
