--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -594,7 +594,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			\vdots&\vdots&&1&&\vdots\\
 			\vdots&\vdots&&&\ddots&0\\
 			1&1&&\cdots&1&1
-		\end{bmatrix}
+		\end{bmatrix}.
 	\end{equation*}
 \end{fancyproof}
 \clearpage
