txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -596,6 +596,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			1&1&&\cdots&1&1
 		\end{bmatrix}.
 	\end{equation*}
+	Consider $M\Delta=\Gamma$. We have a linear transformation of a Gaussian vector $\Delta$. Hence the BMs (that have a finite dimensional distribution) are Gaussian. But if all finite dimensional distributions of the process are Gaussian, then the BM is Gaussian.
 \end{fancyproof}
 \clearpage
 \listoffigures  
