txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -564,7 +564,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			B_{t_{n}}-B_{t_{n-1}}\distnorm{0, t_{n}-t_{n-1}}.
 		\end{array}
 	\end{equation*}
-	This means that 
+	This implies that 
 	\begin{equation*}
 		\left(B_{t_{1}},\ldots, B_{t_{n}}\right)^{\trsp}\distnorm{\left[\begin{smallmatrix}
 				0\\0\\ \vdots\\0\\
@@ -596,7 +596,7 @@ but, anyway, for the \bwm{} to be gaussian all $\Gamma_{n}$ must be gaussian.
 			1&1&&\cdots&1&1
 		\end{bmatrix}.
 	\end{equation*}
-	Consider $M\Delta=\Gamma$. We have a linear transformation of a Gaussian vector $\Delta$. Hence the BMs (that have a finite dimensional distribution) are Gaussian. But if all finite dimensional distributions of the process are Gaussian, then the BM is Gaussian.
+	Consider $M\Delta=\Gamma$. We have a linear transformation of a Gaussian vector $\Delta$, that is therefore still Gaussian But we notice that $\Gamma$ reconstructs the values of the BM relative to $B_{t_{0}}$. Hence the BMs (that have a finite dimensional distribution) are Gaussian. But if all finite dimensional distributions of the process are Gaussian, then the BM is Gaussian.
 \end{fancyproof}
 \clearpage
 \listoffigures  
