txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4416,7 +4416,7 @@ In particular, we can exploit this to generate \rv s from many discrete distribu
 		\begin{equation*}
 			a\cdot\tan\left(\pi\left(U-\unmezz\right)\right)\sim\mathsf{Cauchy}(a).
 		\end{equation*}
-		\item As an exercise, apply this to the arcsi law:
+		\item As an exercise, apply this to the arcsin law:
 		\begin{equation*}
 			\begin{array}{>{\displaystyle}c}
 				f_{x}(t)=\frac{1}{\pi\sqrt{t(1-t)}}\\
