txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4578,8 +4578,7 @@ We are very invested in knowing how to approximate integrals. After all expectat
 	I=\int_{U}g(x)\dx\qquad U\subset\R^{d}.
 \end{equation*}
 For example imagine calculating the expected price of the S\&P 500: that would be an integral of dimension 500... is better to approximate this than to compute explicitly.
-\begin{enumerate}[\circnum]
-	\item \emph{Method 1: rejection method (``\textit{hit or miss}'')}. We have to approximate
+Think about this: we have to approximate
 	\begin{equation*}
 		\int_{a}^{b}g(x)\dx.
 	\end{equation*}
@@ -4590,8 +4589,7 @@ For example imagine calculating the expected price of the S\&P 500: that would b
 		\caption{Under a starry sky.}
 		\label{fig:screenshot063}
 	\end{figure}
-	
-\end{enumerate}
+\section{Monte-Carlo Methods.}
 \listoffigures  
 \end{document} 
 
