txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4583,13 +4583,13 @@ Think about this: we have to approximate
 		\int_{a}^{b}g(x)\dx.
 	\end{equation*}
 	If we know that $c\geq g(x)\geq0$ then we have a ``rectangle'' that we can throw points into and see how many of these fall below the function. The proportion between those points and the total number of points should give us the integral.
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.6\linewidth]{img/screenshot063}
 		\caption{Under a starry sky.}
 		\label{fig:screenshot063}
 	\end{figure}
-\section{Monte-Carlo Methods.}
+\section{Monte-Carlo Methods}
 \listoffigures  
 \end{document} 
 
