txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4584,11 +4584,12 @@ Think about this: we have to approximate
 	If we know that $c\geq g(x)\geq0$ then we have a ``rectangle'' that we can throw points into and see how many of these fall below the function. The proportion between those points and the total number of points should give us the integral.
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.45\linewidth]{img/screenshot063}
+		\includegraphics[width=0.55\linewidth]{img/screenshot063}
 		\caption{Under a starry sky.}
 		\label{fig:screenshot063}
 	\end{figure}
 \section{Monte-Carlo Methods}
+Randomized algorithms are basically divided in two families: 
 \listoffigures  
 \end{document} 
 
