txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4588,8 +4588,8 @@ Think about this: we have to approximate
 		\caption{Under a starry sky.}
 		\label{fig:screenshot063}
 	\end{figure}
-\section{Monte-Carlo Methods}
-Randomized algorithms are basically divided in two families: \textbf{\textcolor{color}{text}}
+\section{Monte Carlo Methods}
+Randomized algorithms are basically divided in two families: \textbf{\textcolor{OrangeRed2}{Monte Carlo}} and \textbf{\textcolor{Gold2}{Las Vegas}} algorithms
 \listoffigures  
 \end{document} 
 
