txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4589,7 +4589,14 @@ Think about this: we have to approximate
 		\label{fig:screenshot063}
 	\end{figure}
 \section{Monte Carlo Methods}
-Randomized algorithms are basically divided in two families: \textbf{\textcolor{OrangeRed2}{Monte Carlo}} and \textbf{\textcolor{Gold2}{Las Vegas}} algorithms
+Randomized algorithms are basically divided in two families: \textbf{\textcolor{OrangeRed2}{Monte Carlo}} and \textbf{\textcolor{Gold2}{Las Vegas}} algorithms.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/screenshot064}
+	\caption{Please bro just one more simulation please bro now the ergodic average will be good please bro just one more run it's only 3000 nested loops to generate a gazillion-dimensional vector please bro}
+	\label{fig:screenshot064}
+\end{figure}
+
 \listoffigures  
 \end{document} 
 
