txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4592,8 +4592,8 @@ Think about this: we have to approximate
 Randomized algorithms are basically divided in two families: \textbf{\textcolor{OrangeRed2}{Monte Carlo}} and \textbf{\textcolor{Gold2}{Las Vegas}} algorithms.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.7\linewidth]{img/screenshot064}
-	\caption{Please bro just one more simulation please bro now the ergodic average will be good please bro just one more run it's only 3000 nested loops to generate a gazillion-dimensional vector please bro}
+	\includegraphics[width=0.5\linewidth]{img/screenshot064}
+	\caption{Please bro just one more simulation please bro now the ergodic average will be good please I swear just one more run it's only 3000 nested loops to generate a gazillion-dimensional vector please bro}
 	\label{fig:screenshot064}
 \end{figure}
 
