txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4596,7 +4596,14 @@ Randomized algorithms are basically divided in two families: \textbf{\textcolor{
 	\caption{Please bro just one more simulation please bro now the ergodic average will be good please I swear just one more run it's only 3000 nested loops to generate a gazillion-dimensional vector please bro}
 	\label{fig:screenshot064}
 \end{figure}
-\textbf{\textcolor{Gold2}{Las Vegas}} algorithms always give the true result, without approximation. An example is the so called ``$n$-queens problem'' where we have to place $n$ queens in a $n\times n$ checkerboard so that no two queens attack each other.
+\textbf{\textcolor{Gold2}{Las Vegas}} algorithms always give the true result, without approximation. An example is the so called ``$n$-queens problem'' where we have to place $n$ queens in a $n\times n$ checkerboard so that no two queens attack each other. So we place the first queen, we choose a \textit{random} position that does not conflict with the previous queens and if no legal moves are available then backtrack or restart. 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/screenshot065}
+	\caption{Now we playing games cuh.}
+	\label{fig:screenshot065}
+\end{figure}
+
 \listoffigures  
 \end{document} 
 
