txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4603,7 +4603,10 @@ Randomized algorithms are basically divided in two families: \textbf{\textcolor{
 	\caption{Now we playing games cuh.}
 	\label{fig:screenshot065}
 \end{figure}
-
+\textbf{\textcolor{OrangeRed2}{Monte Carlo}} methods, instead, give a random value close to a deterministic unknown. If the aim is computing the value of an integral
+\begin{equation*}
+	I=\int_{U}g(x)\dx\qquad\mathrm{for~}U\subset\R^{d}
+\end{equation*}
 \listoffigures  
 \end{document} 
 
