txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4605,8 +4605,9 @@ Randomized algorithms are basically divided in two families: \textbf{\textcolor{
 \end{figure}
 \textbf{\textcolor{OrangeRed2}{Monte Carlo}} methods, instead, give a random value close to a deterministic unknown. If the aim is computing the value of an integral
 \begin{equation*}
-	I=\int_{U}g(x)\dx\qquad\mathrm{for~}U\subset\R^{d}
+	I=\int_{U}g(x)\dx\qquad\mathrm{for~}U\subseteq\R^{d}
 \end{equation*}
+we can approximate them with deterministic methods: for example consider the ``Riemann rectangle'' method or ``trapezoidal method''.
 \listoffigures  
 \end{document} 
 
