txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4608,6 +4608,17 @@ Randomized algorithms are basically divided in two families: \textbf{\textcolor{
 	I=\int_{U}g(x)\dx\qquad\mathrm{for~}U\subseteq\R^{d}
 \end{equation*}
 we can approximate them with deterministic methods: for example consider the ``Riemann rectangle'' method or ``trapezoidal method''.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/screenshot066}
+	\caption{Riemann ``rettangoli balenghi'' method.}
+	\label{fig:screenshot066}
+\end{figure}
+This has some problems:
+\begin{itemize}
+	\item it requires some sort of regularity of the function;
+	\item for high dimension it takes a shitload of time.
+\end{itemize}
 \listoffigures  
 \end{document} 
 
