txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4588,6 +4588,7 @@ Think about this: we have to approximate
 		\caption{Under a starry sky.}
 		\label{fig:screenshot063}
 	\end{figure}
+	This is called the \emph{``hit or miss''} method and we will analyze it in the next section.
 \section{Monte Carlo Methods}
 Randomized algorithms are basically divided in two families: \textbf{\textcolor{OrangeRed2}{Monte Carlo}} and \textbf{\textcolor{Gold2}{Las Vegas}} algorithms.
 \begin{figure}[H]
@@ -4619,6 +4620,8 @@ This has some problems:
 	\item it requires some sort of regularity of the function;
 	\item for high dimension it takes a shitload of time.
 \end{itemize}
+\subsection{``Hit or miss'' method}
+This is easy to generalize
 \listoffigures  
 \end{document} 
 
