--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4630,13 +4630,13 @@ This is valid if $\exists c>0\text{ s.t. }0\leq g(x)<c$ for $\every x\in[a,b]$. 
 	\Omega&=[a,b]\times[0,x]\\
 	S&=\left\{(x,y)\in\Omega:y\leq g(x)\right\}.
 \end{align*}
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\linewidth]{img/screenshot067}
 	\caption{$S$ is a subspace of $\Omega$.}
 	\label{fig:screenshot067}
 \end{figure}
-
+Let $(X,Y)$ be a random couple uniformly distributed on $\Omega$:
 \listoffigures  
 \end{document} 
 
