--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4632,11 +4632,14 @@ This is valid if $\exists c>0\text{ s.t. }0\leq g(x)<c$ for $\every x\in[a,b]$. 
 \end{align*}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\linewidth]{img/screenshot067}
+	\includegraphics[width=0.4\linewidth]{img/screenshot067}
 	\caption{$S$ is a subspace of $\Omega$.}
 	\label{fig:screenshot067}
 \end{figure}
 Let $(X,Y)$ be a random couple uniformly distributed on $\Omega$:
+\begin{equation}
+	f_{(X,Y)}(x,y)=
+\end{equation}
 \listoffigures  
 \end{document} 
 
