txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4648,7 +4648,7 @@ Define $p$ as
 	p&=\pr((X,Y)\in S)\\
 	&=\int\int\indi_S(x,y)f_{(X,Y)}(x,y)\dx\dy\\
 	&=\frac{1}{c(b-a)}\int_{a}^{b}\left(\int_{0}^{g(x)}\dy\right)\dx\\
-	&=\frac{1}{c(b-a)}\ubracketthin{\int_{a}^{b}g(x)}\dx
+	&=\frac{1}{c(b-a)}\ubracketthin{\int_{a}^{b}g(x)\dx}_{I}
 \end{align*}
 \listoffigures  
 \end{document} 
