txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -4650,6 +4650,10 @@ Define $p$ as
 	&=\frac{1}{c(b-a)}\int_{a}^{b}\left(\int_{0}^{g(x)}\dy\right)\dx\\
 	&=\frac{1}{c(b-a)}\ubracketthin{\int_{a}^{b}g(x)\dx}_{I}
 \end{align*}
+so 
+\begin{equation*}
+	I=\ubracketthin{c(b-a)}_{\claptext{area of $\Omega$}}\cdot\ubracketthin{p}_{\mathclap{\frac{\text{area of }S}{\text{area of }\Omega}}}
+\end{equation*}
 \listoffigures  
 \end{document} 
 
